tolk-tester/tests/invalid-syntax/err-3472.tolk
const ss = ton("0.0.0");

/**
@compilation_should_fail
@stderr argument is not a valid number like "0.05"
 */
